--- a/Android/Release/AndroidManifest.xml
+++ b/Android/Release/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
+        android:usesCleartextTraffic="true"
         android:resizeableActivity="false">
 
         
