--- a/Android64/Release/dcMobile/AndroidManifest.xml
+++ b/Android64/Release/dcMobile/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.novorioexpress.dcMobile"
-        android:versionCode="10"
-        android:versionName="1.10.0"
+        android:versionCode="11"
+        android:versionName="1.11.0"
         android:installLocation="auto">
 
     <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="29" />
@@ -18,6 +18,7 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
+        android:usesCleartextTraffic="true"
         android:resizeableActivity="false">
 
         
